# ncar-hackathon-xarray-on-gpus

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  ERA5TimeSeriesDataset.py  LICENSE  README.md  conda-lock.yml  environment.yml  main.py  test_zarr.py  zarr-gpu-env.yaml  zarr_DALI.py
.github/workflows/: built-and-push.yaml
DALI_e2e/: README.md
bash_scripts/: array-throughput-casper.txt  array-throughput-derecho.txt  create_array.py  parse_throughput.sh  run_on_directory.sh  time_throughput_directory.sh  time_throughput_file.sh
benchmark/: era5_zarr_benchmark.py  pyproject.toml  zstd_benchmark.py
benchmarks/: era5_zarr_benchmark.py  zstd_benchmark.py
rechunk/: era5_rechunking.ipynb
rechunking/: environment.yml
synthetic_example/: SyntheticDataset.py  train_unet_synthetic.py
test_case/: ERA5TimeSeriesDataset.py  README.md  train_unet.py
zarr_ML_optimization/: ERA5TimeSeriesDataset.py  README.md  era5_dataloader.py  train_unet.py  trainer_utils.py
